fuss; submission candidate 👀 @sammo3182

--- a/paper/submission/memo.qmd
+++ b/paper/submission/memo.qmd
@@ -319,7 +319,7 @@ We have added those plots here as Appendix D.
 \vspace{.75in}
 
 Thanks again for the opportunity to revise this work.
-We hope you will agree that it now will be a valuable contribution to the _BJPS_.
+We hope you will agree that, in light of the improvements the reviewers have facilitated, it now would make a valuable contribution to the _BJPS_.
 
 # References {-} 
 
